test/type/fail/return_non_void.j
class A{
  Void main() {
    return;
  }
}

class B {
  Int f() {
    return;
  }
}
